test/errors/functions/params_multiple_error.hy
// EXPECT_OUTPUT: Only one params parameter is allowed
int bad(params int[] first, params int[] second)
{
    return 0
}
